<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="action_download">Download</string>
    <string name="action_sets">Sets</string>
    <string name="action_settings">Settings</string>
    <string name="action_tunes">Tunes</string>
    <string name="app_name">ChordGrid</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_add">Add</string>
    <string name="menu_discard">Discard</string>
    <string name="title_activity_display_tune_grid">DisplayTuneGridActivity</string>
    <string name="title_activity_display_tune_set">DisplayTuneSetActivity</string>
    <string name="title_activity_select_file">Select File</string>
    <string name="select_file">Select a file:</string>
    <string name="error_drive_read">Cannot read file contents from Google Drive!</string>
    <string name="tunes">Tunes</string>
    <string name="sets">Sets</string>
    <string name="add_set">Add set</string>
    <string name="add_tune">Add tune</string>
    <string name="create_set">Create Set</string>
    <string name="settings_paged_tuneset_summary">Tune sets can be displayed paged (1 tune per page) or continuously on a single page.</string>
    <string name="settings_paged_tuneset">Paged tune sets</string>
    <string name="settings_paged_tuneset_on">Paged</string>
    <string name="settings_pages_tuneset_off">Continuous</string>
    <string name="settings_title">Settings</string>
    <string name="settings_category_definitions">Definitions</string>
    <string name="settings_category_display">Display</string>
    <string name="settings_rhythms">Rhythms</string>
    <string name="settings_rhythms_summary">Create, edit or discard rhythms.</string>
    <string name="settings_rhythm_key_add">add_rhythm</string>
    <string name="settings_rhythm_add">Add</string>
    <string name="settings_rhythm_add_summary">Add a new rhythm</string>
    <string name="settings_rhythm_key_discard">discard_rhythm</string>
    <string name="settings_rhythm_discard">Discard</string>
    <string name="settings_rhythm_discard_summary">Discard the selected rhythm</string>
    <string name="settings_rhythm_key_edit">edit_rhythm</string>
    <string name="settings_rhythm_edit">Edit</string>
    <string name="settings_rhythm_edit_summary">Edit the selected summary</string>
    <string name="rhythm_dialog_title">Edit Rhythm</string>
    <string name="rhythm_name">Name:</string>
    <string name="rhythm_signature">Signature:</string>
    <string name="rhythm_beats_per_bar">Beats Per Bar:</string>
    <string name="rhythm_name_already_exists">This name already exists!</string>
    <string name="discard">Discard</string>
    <string name="msg_confirm_discard">Are you sure you want to discard these %d items?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="select_tunes">Select Tunes</string>
    <string name="select_rhythm">Select Rhythm</string>
    <string name="nothing">Nothing</string>
    <string name="merge">Merge</string>
    <string name="save">Save</string>
    <string name="merging_tunebook">Merging Tune Book</string>
    <string name="merging_tunebook_tune_fmt">Merged %1$d/%2$d tunes (%3$d%%)…</string>
    <string name="merging_tunebook_set_fmt">Merged %1$d/%2$d sets (%3$d%%)…</string>
    <string name="merging_tunebook_tunes">Merging tunes...</string>
    <string name="merging_tunebook_sets">Merging sets...</string>
    <string name="title_activity_reorder_tune_set">ReorderTuneSetActivity</string>
    <string name="reorder_tunes">Reorder tunes</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tune">Tune</string>
    <string name="tunebook">Tunebook</string>
    <string name="edit_tune_add_part">Add part</string>
    <string name="edit_tune_add_line">Add line</string>
    <string name="email_send_tunebook_dialog_title">Share your tunebook.</string>
    <string name="email_send_tunebook_message">Here is your tunebook...</string>
    <string name="email_attachment_error">Attachment Error</string>
    <string name="email_select_provider">Select your Email Provider :</string>
    <string name="chord1">Chord #1:</string>
    <string name="chord2">Chord #2:</string>
    <string name="chord3">Chord #3:</string>
    <string name="chord4">Chord #4:</string>
    <string name="edit_measure">Edit Measure</string>
    <string name="use_2nd_chord">Use 2nd chord</string>
    <string name="use_3rd_chord">Use 3rd chord</string>
    <string name="use_4th_chord">Use 4th chord</string>
    <string name="crash_toast_text">Ooops! ChordGrid has crashed, but a report will be sent to the developer to help fix the issue!</string>
</resources>
